2002-05-09  Jody Goldberg <jody@gnome.org>

	* gnome-mouse-properties.c (dialog_button_clicked_cb) : enable help.
	(main) : ditto.

2002-05-09  Jody Goldberg <jody@gnome.org>

	* gnome-mouse-properties.glade : long forgotten atk patch from Dave.
	  Sorry.

2002-05-08  Jakub Steiner <jimmac@ximian.com>

	* double-click-maybe.png:
	* double-click-off.png:
	* double-click-on.png: use a lightbulb on a dark background

Wed Apr 10 18:05:42 2002  Jonathan Blandford  <jrb@gnome.org>

	* mouse.desktop.in (Exec): s/gnome2/gnome

2002-03-21  Dave Camp  <dave@ximian.com>

	* gnome-mouse-properties.c (*_{to|from}_gconf): Add the peditor 
	arguments.
	(setup_dialog): Use locate_pointer instead of locate_pointer_id.
	(threshold_to_gconf): New function.
	(setup_dialog): Use threshold_to_gconf for motion_threshold and
	drag_threshold.

2002-03-11  Richard Hestilow  <hestilow@ximian.com>

	* gnome-mouse-properties.c (drawing_area_button_press_event):
	Check for changeset != NULL before looking in changeset.

2002-03-10  Seth Nickell  <snickell@stanford.edu>

	* gnome-mouse-properties.c: (main):

	Activate the settings daemon if its not already running.

2002-02-27  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-mouse-properties.c: s/PACKAGE/GETTEXT_PACKAGE/g
	
Tue Feb 19 23:52:17 2002  Jonathan Blandford  <jrb@redhat.com>

	* gnome-mouse-properties.c (cursor_font_changed): Hook up cursor code.

Fri Feb  8 01:41:40 2002  Jonathan Blandford  <jrb@redhat.com>

	* Makefile.am (pixmap_DATA): install cursor images.

2002-02-04  Lauris Kaplinski  <lauris@ximian.com>

	* gnome-mouse-properties.c (drawing_area_expose_event): Kill warning
	(dialog_button_clicked_cb): Use G_TYPE_STRING
	(dialog_button_clicked_cb): Use GtkDialog
	(left_handed_toggle_cb): Do not crash on NULL value

Tue Jan  8 15:47:24 2002  Jonathan Blandford  <jrb@redhat.com>

	* .cvsignore: New ignores.
	* gnome-mouse-properties.glade: Update of glade file for cursors
	* mouse-cursor-normal-large.png: New images